src/MiniCParser.py
# Generated from MiniC.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class MiniCParser ( Parser ):

    grammarFileName = "MiniC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"';'", u"'='", u"'['", u"']'", u"'('", 
                     u"')'", u"','", u"'{'", u"'}'", u"'-'", u"'+'", u"'--'", 
                     u"'++'", u"'*'", u"'/'", u"'%'", u"'<'", u"'>'", u"'!'", 
                     u"'void'", u"'int'", u"'while'", u"'if'", u"'else'", 
                     u"'return'", u"'or'", u"'and'", u"'<='", u"'>='", u"'=='", 
                     u"'!='" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"VOID", u"INT", u"WHILE", u"IF", u"ELSE", u"RETURN", 
                      u"OR", u"AND", u"LE", u"GE", u"EQ", u"NE", u"IDENT", 
                      u"LITERAL", u"DecimalConstant", u"OctalConstant", 
                      u"HexadecimalConstant", u"WS" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_var_decl = 2
    RULE_type_spec = 3
    RULE_fun_decl = 4
    RULE_params = 5
    RULE_param = 6
    RULE_stmt = 7
    RULE_expr_stmt = 8
    RULE_while_stmt = 9
    RULE_compound_stmt = 10
    RULE_local_decl = 11
    RULE_if_stmt = 12
    RULE_return_stmt = 13
    RULE_expr = 14
    RULE_args = 15

    ruleNames =  [ u"program", u"decl", u"var_decl", u"type_spec", u"fun_decl", 
                   u"params", u"param", u"stmt", u"expr_stmt", u"while_stmt", 
                   u"compound_stmt", u"local_decl", u"if_stmt", u"return_stmt", 
                   u"expr", u"args" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    VOID=20
    INT=21
    WHILE=22
    IF=23
    ELSE=24
    RETURN=25
    OR=26
    AND=27
    LE=28
    GE=29
    EQ=30
    NE=31
    IDENT=32
    LITERAL=33
    DecimalConstant=34
    OctalConstant=35
    HexadecimalConstant=36
    WS=37

    def __init__(self, input):
        super(MiniCParser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser

        def decl(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.DeclContext)
            else:
                return self.getTypedRuleContext(MiniCParser.DeclContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_program

        def enterRule(self, listener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)




    def program(self):

        localctx = MiniCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.decl()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MiniCParser.VOID or _la==MiniCParser.INT):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.DeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MiniCParser.Var_declContext,0)


        def fun_decl(self):
            return self.getTypedRuleContext(MiniCParser.Fun_declContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_decl

        def enterRule(self, listener):
            if hasattr(listener, "enterDecl"):
                listener.enterDecl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDecl"):
                listener.exitDecl(self)




    def decl(self):

        localctx = MiniCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 39
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.fun_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.Var_declContext, self).__init__(parent, invokingState)
            self.parser = parser

        def type_spec(self):
            return self.getTypedRuleContext(MiniCParser.Type_specContext,0)


        def IDENT(self):
            return self.getToken(MiniCParser.IDENT, 0)

        def LITERAL(self):
            return self.getToken(MiniCParser.LITERAL, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_var_decl

        def enterRule(self, listener):
            if hasattr(listener, "enterVar_decl"):
                listener.enterVar_decl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVar_decl"):
                listener.exitVar_decl(self)




    def var_decl(self):

        localctx = MiniCParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl)
        try:
            self.state = 58
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.type_spec()
                self.state = 42
                self.match(MiniCParser.IDENT)
                self.state = 43
                self.match(MiniCParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.type_spec()
                self.state = 46
                self.match(MiniCParser.IDENT)
                self.state = 47
                self.match(MiniCParser.T__1)
                self.state = 48
                self.match(MiniCParser.LITERAL)
                self.state = 49
                self.match(MiniCParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.type_spec()
                self.state = 52
                self.match(MiniCParser.IDENT)
                self.state = 53
                self.match(MiniCParser.T__2)
                self.state = 54
                self.match(MiniCParser.LITERAL)
                self.state = 55
                self.match(MiniCParser.T__3)
                self.state = 56
                self.match(MiniCParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_specContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.Type_specContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(MiniCParser.VOID, 0)

        def INT(self):
            return self.getToken(MiniCParser.INT, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_type_spec

        def enterRule(self, listener):
            if hasattr(listener, "enterType_spec"):
                listener.enterType_spec(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitType_spec"):
                listener.exitType_spec(self)




    def type_spec(self):

        localctx = MiniCParser.Type_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            _la = self._input.LA(1)
            if not(_la==MiniCParser.VOID or _la==MiniCParser.INT):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fun_declContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.Fun_declContext, self).__init__(parent, invokingState)
            self.parser = parser

        def type_spec(self):
            return self.getTypedRuleContext(MiniCParser.Type_specContext,0)


        def IDENT(self):
            return self.getToken(MiniCParser.IDENT, 0)

        def params(self):
            return self.getTypedRuleContext(MiniCParser.ParamsContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(MiniCParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_fun_decl

        def enterRule(self, listener):
            if hasattr(listener, "enterFun_decl"):
                listener.enterFun_decl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFun_decl"):
                listener.exitFun_decl(self)




    def fun_decl(self):

        localctx = MiniCParser.Fun_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fun_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.type_spec()
            self.state = 63
            self.match(MiniCParser.IDENT)
            self.state = 64
            self.match(MiniCParser.T__4)
            self.state = 65
            self.params()
            self.state = 66
            self.match(MiniCParser.T__5)
            self.state = 67
            self.compound_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.ParamsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def param(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.ParamContext)
            else:
                return self.getTypedRuleContext(MiniCParser.ParamContext,i)


        def VOID(self):
            return self.getToken(MiniCParser.VOID, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_params

        def enterRule(self, listener):
            if hasattr(listener, "enterParams"):
                listener.enterParams(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitParams"):
                listener.exitParams(self)




    def params(self):

        localctx = MiniCParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.state = 79
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.param()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MiniCParser.T__6:
                    self.state = 70
                    self.match(MiniCParser.T__6)
                    self.state = 71
                    self.param()
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.match(MiniCParser.VOID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.ParamContext, self).__init__(parent, invokingState)
            self.parser = parser

        def type_spec(self):
            return self.getTypedRuleContext(MiniCParser.Type_specContext,0)


        def IDENT(self):
            return self.getToken(MiniCParser.IDENT, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_param

        def enterRule(self, listener):
            if hasattr(listener, "enterParam"):
                listener.enterParam(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitParam"):
                listener.exitParam(self)




    def param(self):

        localctx = MiniCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.state = 89
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.type_spec()
                self.state = 82
                self.match(MiniCParser.IDENT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.type_spec()
                self.state = 85
                self.match(MiniCParser.IDENT)
                self.state = 86
                self.match(MiniCParser.T__2)
                self.state = 87
                self.match(MiniCParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.StmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr_stmt(self):
            return self.getTypedRuleContext(MiniCParser.Expr_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(MiniCParser.Compound_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MiniCParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MiniCParser.While_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MiniCParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_stmt

        def enterRule(self, listener):
            if hasattr(listener, "enterStmt"):
                listener.enterStmt(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStmt"):
                listener.exitStmt(self)




    def stmt(self):

        localctx = MiniCParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt)
        try:
            self.state = 96
            token = self._input.LA(1)
            if token in [MiniCParser.T__4, MiniCParser.T__9, MiniCParser.T__10, MiniCParser.T__11, MiniCParser.T__12, MiniCParser.T__18, MiniCParser.IDENT, MiniCParser.LITERAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.expr_stmt()

            elif token in [MiniCParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.compound_stmt()

            elif token in [MiniCParser.IF]:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.if_stmt()

            elif token in [MiniCParser.WHILE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.while_stmt()

            elif token in [MiniCParser.RETURN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 95
                self.return_stmt()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expr_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.Expr_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_expr_stmt

        def enterRule(self, listener):
            if hasattr(listener, "enterExpr_stmt"):
                listener.enterExpr_stmt(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpr_stmt"):
                listener.exitExpr_stmt(self)




    def expr_stmt(self):

        localctx = MiniCParser.Expr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expr_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.expr(0)
            self.state = 99
            self.match(MiniCParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.While_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(MiniCParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MiniCParser.StmtContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_while_stmt

        def enterRule(self, listener):
            if hasattr(listener, "enterWhile_stmt"):
                listener.enterWhile_stmt(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitWhile_stmt"):
                listener.exitWhile_stmt(self)




    def while_stmt(self):

        localctx = MiniCParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(MiniCParser.WHILE)
            self.state = 102
            self.match(MiniCParser.T__4)
            self.state = 103
            self.expr(0)
            self.state = 104
            self.match(MiniCParser.T__5)
            self.state = 105
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.Compound_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def local_decl(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.Local_declContext)
            else:
                return self.getTypedRuleContext(MiniCParser.Local_declContext,i)


        def stmt(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniCParser.StmtContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_compound_stmt

        def enterRule(self, listener):
            if hasattr(listener, "enterCompound_stmt"):
                listener.enterCompound_stmt(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCompound_stmt"):
                listener.exitCompound_stmt(self)




    def compound_stmt(self):

        localctx = MiniCParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_compound_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(MiniCParser.T__7)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniCParser.VOID or _la==MiniCParser.INT:
                self.state = 108
                self.local_decl()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniCParser.T__4) | (1 << MiniCParser.T__7) | (1 << MiniCParser.T__9) | (1 << MiniCParser.T__10) | (1 << MiniCParser.T__11) | (1 << MiniCParser.T__12) | (1 << MiniCParser.T__18) | (1 << MiniCParser.WHILE) | (1 << MiniCParser.IF) | (1 << MiniCParser.RETURN) | (1 << MiniCParser.IDENT) | (1 << MiniCParser.LITERAL))) != 0):
                self.state = 114
                self.stmt()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(MiniCParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Local_declContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.Local_declContext, self).__init__(parent, invokingState)
            self.parser = parser

        def type_spec(self):
            return self.getTypedRuleContext(MiniCParser.Type_specContext,0)


        def IDENT(self):
            return self.getToken(MiniCParser.IDENT, 0)

        def LITERAL(self):
            return self.getToken(MiniCParser.LITERAL, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_local_decl

        def enterRule(self, listener):
            if hasattr(listener, "enterLocal_decl"):
                listener.enterLocal_decl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLocal_decl"):
                listener.exitLocal_decl(self)




    def local_decl(self):

        localctx = MiniCParser.Local_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_local_decl)
        try:
            self.state = 139
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.type_spec()
                self.state = 123
                self.match(MiniCParser.IDENT)
                self.state = 124
                self.match(MiniCParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.type_spec()
                self.state = 127
                self.match(MiniCParser.IDENT)
                self.state = 128
                self.match(MiniCParser.T__1)
                self.state = 129
                self.match(MiniCParser.LITERAL)
                self.state = 130
                self.match(MiniCParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                self.type_spec()
                self.state = 133
                self.match(MiniCParser.IDENT)
                self.state = 134
                self.match(MiniCParser.T__2)
                self.state = 135
                self.match(MiniCParser.LITERAL)
                self.state = 136
                self.match(MiniCParser.T__3)
                self.state = 137
                self.match(MiniCParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.If_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MiniCParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def stmt(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniCParser.StmtContext,i)


        def ELSE(self):
            return self.getToken(MiniCParser.ELSE, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_if_stmt

        def enterRule(self, listener):
            if hasattr(listener, "enterIf_stmt"):
                listener.enterIf_stmt(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIf_stmt"):
                listener.exitIf_stmt(self)




    def if_stmt(self):

        localctx = MiniCParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_if_stmt)
        try:
            self.state = 155
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(MiniCParser.IF)
                self.state = 142
                self.match(MiniCParser.T__4)
                self.state = 143
                self.expr(0)
                self.state = 144
                self.match(MiniCParser.T__5)
                self.state = 145
                self.stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.match(MiniCParser.IF)
                self.state = 148
                self.match(MiniCParser.T__4)
                self.state = 149
                self.expr(0)
                self.state = 150
                self.match(MiniCParser.T__5)
                self.state = 151
                self.stmt()
                self.state = 152
                self.match(MiniCParser.ELSE)
                self.state = 153
                self.stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Return_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.Return_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(MiniCParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_return_stmt

        def enterRule(self, listener):
            if hasattr(listener, "enterReturn_stmt"):
                listener.enterReturn_stmt(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitReturn_stmt"):
                listener.exitReturn_stmt(self)




    def return_stmt(self):

        localctx = MiniCParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_return_stmt)
        try:
            self.state = 163
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(MiniCParser.RETURN)
                self.state = 158
                self.match(MiniCParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.match(MiniCParser.RETURN)
                self.state = 160
                self.expr(0)
                self.state = 161
                self.match(MiniCParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniCParser.ExprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniCParser.ExprContext,i)


        def IDENT(self):
            return self.getToken(MiniCParser.IDENT, 0)

        def LITERAL(self):
            return self.getToken(MiniCParser.LITERAL, 0)

        def args(self):
            return self.getTypedRuleContext(MiniCParser.ArgsContext,0)


        def EQ(self):
            return self.getToken(MiniCParser.EQ, 0)

        def NE(self):
            return self.getToken(MiniCParser.NE, 0)

        def LE(self):
            return self.getToken(MiniCParser.LE, 0)

        def GE(self):
            return self.getToken(MiniCParser.GE, 0)

        def AND(self):
            return self.getToken(MiniCParser.AND, 0)

        def OR(self):
            return self.getToken(MiniCParser.OR, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_expr

        def enterRule(self, listener):
            if hasattr(listener, "enterExpr"):
                listener.enterExpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpr"):
                listener.exitExpr(self)



    def expr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniCParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 28
        self.enterRecursionRule(localctx, 28, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 166
                self.match(MiniCParser.T__9)
                self.state = 167
                self.expr(20)
                pass

            elif la_ == 2:
                self.state = 168
                self.match(MiniCParser.T__10)
                self.state = 169
                self.expr(19)
                pass

            elif la_ == 3:
                self.state = 170
                self.match(MiniCParser.T__11)
                self.state = 171
                self.expr(18)
                pass

            elif la_ == 4:
                self.state = 172
                self.match(MiniCParser.T__12)
                self.state = 173
                self.expr(17)
                pass

            elif la_ == 5:
                self.state = 174
                self.match(MiniCParser.T__18)
                self.state = 175
                self.expr(5)
                pass

            elif la_ == 6:
                self.state = 176
                self.match(MiniCParser.IDENT)
                self.state = 177
                self.match(MiniCParser.T__1)
                self.state = 178
                self.expr(2)
                pass

            elif la_ == 7:
                self.state = 179
                self.match(MiniCParser.LITERAL)
                pass

            elif la_ == 8:
                self.state = 180
                self.match(MiniCParser.T__4)
                self.state = 181
                self.expr(0)
                self.state = 182
                self.match(MiniCParser.T__5)
                pass

            elif la_ == 9:
                self.state = 184
                self.match(MiniCParser.IDENT)
                pass

            elif la_ == 10:
                self.state = 185
                self.match(MiniCParser.IDENT)
                self.state = 186
                self.match(MiniCParser.T__2)
                self.state = 187
                self.expr(0)
                self.state = 188
                self.match(MiniCParser.T__3)
                pass

            elif la_ == 11:
                self.state = 190
                self.match(MiniCParser.IDENT)
                self.state = 191
                self.match(MiniCParser.T__4)
                self.state = 192
                self.args()
                self.state = 193
                self.match(MiniCParser.T__5)
                pass

            elif la_ == 12:
                self.state = 195
                self.match(MiniCParser.IDENT)
                self.state = 196
                self.match(MiniCParser.T__2)
                self.state = 197
                self.expr(0)
                self.state = 198
                self.match(MiniCParser.T__3)
                self.state = 199
                self.match(MiniCParser.T__1)
                self.state = 200
                self.expr(0)
                pass

